[metadata]
name = wsgi_prometheus
home-page = https://github.com/benley/python-wsgi-prometheus
author = Benjamin Stafin
author-email = ben@folsomlabs.com
license = Apache 2.0
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
  Topic :: System :: Monitoring

[files]
modules =
  wsgi_prometheus

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
show-source = True
exclude = *.egg,*.egg_info/*
